--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
   src: url('/fonts/Outfit-VariableFont_wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
